# newsparser

./: .env.example  .gitignore  CLAUDE.md  MARIMO_RULES.md  TODO.md  TODO_later.md  TODO_more_sources.md  pyproject.toml  pytest.ini  test_final.html
bck_stages/collect/2025-06-09/: post_3lr6xmz77he2i.md  post_3lr6xmzf2xe2i.md  post_3lr6xn2pzxe2i.md  post_3lr6xwtkkxc2d.md  post_3lr72lyznpu2l.md  post_3lr72m4bf42k2.md  post_3lr72mcok762g.md  post_3lr7bia43qc2h.md  post_3lr7kb24y4k23.md
bck_stages/collect/2025-06-10/: post_3lr7lvmoewc2r.md  post_3lr7quezgec25.md  post_3lr7wmnsfk42s.md  post_3lrabans7e22r.md  post_3lranqw2prmn2.md  post_3lrapd2y5vc2c.md  post_3lraz4yguoc2c.md  post_3lrb5yannew2e.md  post_3lrb6kt7ssk2z.md  post_3lrbae7bnuu2v.md  post_3lrbahreb6s2u.md  post_3lrbd7kgtac2g.md  post_3lrbdafbbws2g.md  post_3lrbgh7ihkrr2.md  post_3lrbhnuakws2r.md  post_3lrbny6kicc2s.md  post_3lrbr27o4lr2e.md  post_3lrbwevwqu22b.md  post_3lrdthmt4qeu2.md
bck_stages/collect/2025-06-11/: post_3lrceqmnejk2d.md  post_3lrcfvp7eks2c.md  post_3lrcnagcxe52q.md  post_3lrcrzw6eok27.md  post_3lrcv6e36uc2c.md  post_3lrcwpx3rck2d.md  post_3lrcx3vj7ws2d.md  post_3lrdho7fdqu2a.md  post_3lrdkuvcuek2d.md  post_3lrdltfosz22s.md  post_3lrdryqiybe2g.md  post_3lrdwgwhjes2p.md  post_3lre3b77dws2t.md  post_3lrea56xbqk2g.md
bck_stages/collect/2025-06-12/: post_3lrep6fylw72q.md  post_3lreun4zglj2p.md  post_3lrfgodiwac2i.md  post_3lrfi3v2sbk2z.md  post_3lrfjbxgavs2l.md  (+16 more)
config/base/: app.yaml  models.yaml  prompts.yaml
config/experiments/: experiment_001_sonnet_test.yaml
lyrics/: about.md
metadata/: README.md  collect.json  collect_parquet.md  evaluate.json  evaluate_parquet.md  fetch.json  fetch_parquet.md  schema.json
notebooks/: README.md  TEMPLATE.py  analyze_content.py  analyze_posts.py  articles.py  content_stats.py  data_exploration.py  data_parquets.py  eval_eval.py  explore.py  explore_simple.py  sqltest.py  stats.py
plans/: analytics_infrastructure.md  configuration_externalization_plan.md  current_status_and_next_steps.md  duckdb-query-plan.md  duckdb-query-tool-README.md  notes_phase_1.md  notes_phase_2.md  notes_phase_3.md  old_claude.md  phase_1.md  phase_2.9.md  phase_2.md  phase_2_5.md  phase_2_6.md  phase_2_6_plan.md  phase_2_7.md  phase_2_9_1.md  phase_3.md  phase_3_perex_update.md  phase_4.md  phase_4_minimal.md  phase_5.md  phases_overview.md  refactoring_stage_based_architecture.md  thread_collection_enhancement.md
src/analytics/: __init__.py  parquet_export.py
src/bluesky/: client.py  collector.py  query_builder.py  query_builders.py  thread_collector.py  url_utils.py
src/cli/: commands.py  config_commands.py  legacy_commands.py  new_commands.py  stage_commands.py
src/config/: config_manager.py  searches.py  searches.yaml  settings.py
src/content/: __init__.py  exceptions.py  extractor.py  fetcher.py  models.py
src/evaluation/: __init__.py  anthropic_client.py  processor.py
src/html/: README.md  about-template.html  duckdb-query-tool-r2.html  duckdb-query-tool.html  metadata-example.html
src/models/: analytics.py  article.py  common.py  evaluation.py  fetch.py  post.py  report.py  url_registry.py
src/reports/: generator.py
src/stages/: __init__.py  base.py  collect.py  evaluate.py  fetch.py  markdown.py  report.py
src/storage/: file_manager.py  r2_client.py
src/templates/: about.html  base.html  daily.html  homepage.html
src/utils/: filtering.py  language_detection.py  logging.py  url_expansion.py  url_registry.py
tests/test_bluesky/: test_client.py  test_collector.py  test_query_builder.py  test_query_builders.py
tests/test_config/: test_searches.py  test_settings.py
tests/test_content/: __init__.py  test_extractor.py  test_fetcher.py  test_models.py
tests/test_models/: test_article.py  test_common.py  test_evaluation.py  test_post.py  test_post_language.py  test_report.py  test_url_registry.py
tests/test_reports/: __init__.py  test_generator.py
tests/test_storage/: test_file_manager.py  test_r2_client.py
tests/test_utils/: test_filtering.py  test_language_detection.py  test_logging.py  test_url_registry.py
(+315 files in other folders)
